[package]
name = "protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Chrome DevTools Protocol (CDP) server for browser_oxide"

[dependencies]
browser = { workspace = true }
dom = { workspace = true }
js_runtime = { workspace = true }
stealth = { workspace = true }
net = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
