[package]
name = "stealth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Stealth fingerprint profiles for browser_oxide — consistent browser identities"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
sha2 = "0.10"
hex = "0.4"
