[package]
name = "stealth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Stealth fingerprint profiles for browser_oxide — consistent browser identities"
publish = false                                                                                # 9 of 16 crate names collide on crates.io; flip per-crate when renamed

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
rand = "0.10"
rand_chacha = "0.10"
rand_distr = "0.6"

[lints]
workspace = true
